# control-plane-api/src/openapi/swagger.yaml
@@ -533,13 +533,11 @@ components:
         - pagination
       type: object
       additionalProperties: false
-    _36_Enums.AccountPlanEnum:
-      type: string
+    AccountPlanEnum:
       enum:
         - free
         - enterprise
-    AccountPlanEnum:
-      $ref: "#/components/schemas/_36_Enums.AccountPlanEnum"
+      type: string
     PlatformProviderResponse:
       properties:
         uid:
